Refactor product creation flow:
- Replace deprecated StringUtils with AWS SDK's updated utilities.
- Improve validation and logging in `ProductCreateService` and queue producers/consumers.
- Introduce `JavaTimeModule` and deserialization feature updates in `ObjectMapperConfiguration`.
- Add thread pooling configuration in `AsyncConfiguration` for product creation tasks.